# Eldorado

./: .gitignore  CMakeLists.txt  Eldorado.sln  Makefile  README.md
Eldorado/: Eldorado.vcxproj  Eldorado.vcxproj.filters  body.cpp  body.h  demoframe.cpp  demoframe.h  earthframe.cpp  earthframe.h  main.cpp  menuframe.cpp  menuframe.h
Eldorado/models/: earth.mtl  lamp.blend  moon.mtl
Eldorado/shaders/: lamp.frag  lamp.vert  menu.vert  shader.frag  shader.vert
models/: earth.mtl  moon.mtl
shaders/: menu.frag  shader.frag
src/: body.cpp  earthframe.cpp  earthframe.h  main.cpp  menuframe.cpp  menuframe.h
